<resources>
    <string name="wrong_city_name">"Couldn't locate city"</string>
    <string name="turn_on_GPS">Turn on GPS</string>
    <string name="internet_request">Please enable WiFi or mobile data</string>
    <string name="app_name">Push App</string>
    <string name="button_home">home</string>
    <string name="button_favourites">favourites</string>
    <string name="button_search">search</string>
    <string name="button_about">about</string>
    <string name="startup_text">Push App</string>
    <string name="icon_description">this is app\'s logo</string>
    <string name="placeholder">fetching weather</string>
    <string name="placeholder_2">---</string>
    <string name="placeholder_3">Anonymous</string>
    <string name="about">This app was created as a project for Mobile Devices Programming classes at AGH university.</string>
    <string name="authors">Authors: Karol Wnęk and Sebastian Kulig</string>
    <string name="sources">Native app written in Java that utilizes Firebase Cloud Messaging and Firebase Realtime Database</string>
    <string name="disclaimer">Our app definitely doesn\'t spy on you.</string>
    <string name="about_text">push app - version 1.0\nAuthors: Karol Wnęk, Sebastian Kulig</string>
    <string name="localization">Options:</string>
    <string name="add_home_toast">Added to favourites</string>
    <string name="del_home_toast">Removed from favourites</string>
    <string name="del_favs">delete</string>
    <string name="all_favs">select all</string>
    <string name="cancel_favs">cancel</string>
    <string name="empty_list">It\'s so empty in here that even the echo is gone!\nAdd some places to favourites.</string>
    <string name="text_hint">Search for the city here"</string>
    <string name="did_you_know_that">Did you know that?</string>
    <string name="desc">weather icon</string>
    <string name="tempera">temperature:</string>
    <string name="atm">pressure:</string>
    <string name="win">wind:</string>
    <string name="hum">humidity:</string>

    <string name="celc">%1$s °C</string>
    <string name="hPa">%1$s hPa</string>
    <string name="speed">%1$s km</string>
    <string name="hum_per">%1$s %%</string>

    <string name="first_day_weather_message">%1$s °C</string>
    <string name="second_day_weather_message">%1$s °C</string>
    <string name="third_day_weather_message">%1$s °C</string>

    <string name="hello_my_name_is">Hello, my name is:</string>
    <string name="unregister">delete\naccount</string>
    <string name="register">sign out</string>
    <string name="sign_in">sign in</string>
    <string name="email">with email</string>
    <string name="anon">as a guest</string>
    <string name="error">Ups. Something went wrong :(</string>
    <string name="topic">Manage topics</string>
    <string name="topic_hint">Subscribe to topic</string>
    <string name="sub">subscribe</string>
    <string name="unsub">unsubscribe\nall</string>
    <string name="default_notification_channel_id">channel_one</string>
    <string name="success">success</string>

    <string name="response_main">The question is.</string>
    <string name="response_default">You haven\'t receive any questions yet.</string>
    <string name="response_hint">Write your answer here.</string>

    <string name="nav_answers">answers</string>


    <string-array name="weather_curiosities">
        <item>You can tell the temperature by counting a cricket\'s chirps!</item>
        <item>Sandstorms can swallow up entire cities.</item>
        <item>Dirt mixed with wind can make dust storms called black blizzards.</item>
        <item>A mudslide can carry rocks, trees, vehicles and entire buildings!</item>
        <item>The lowest ever recorded world temperature was at Vostok Station, Antarctica on the
            21 July 1983 at a bitter -89.6°C</item>
        <item>Mawsynram in India is noted as being the wettest place on earth is with over 11 meters
            of rain falling every year.</item>
        <item>Antofagasta in Chile is the driest place on the planet getting less than 0.1mm per
            year, and with many years having no rainfall whatsoever.</item>
        <item>Yuma in the state of Arizona has over 4,000 hours of sunshine per year - making
            it the sunniest place on the planet!</item>
        <item>The South Pole is the least sunny place - only 182 days a year get sunshine.</item>
        <item>The windiest place on earth is Commonwealth Bay, Antarctica where winds of 321 km/h
            have been recorded.</item>
        <item>9 out of 10 lightning bolts strike land rather than oceans.</item>
        <item>\"Ginger\", was the longest-lasting Atlantic tropical storm, which spun around the
            open ocean for 28 days in 1971.</item>
        <item>The world\'s largest snowflake was recorded in the Guinness Book of Records, at 38 cm
            wide and 20 cm thick. The snow flake fell at Fort Keogh, Montana, USA on 28 January 1887.</item>
        <item>\"Angus\" - the tallest snowman, was made by residents of Bethel, Maine, USA, measuring
            a whopping 34.63 metres.</item>
        <item>A heatwave can make train tracks bend!</item>
        <item>About 2,000 thunderstorms rain down on Earth every minute.</item>
        <item>A 2003 heatwave in Napa County, California turned grapes to raisins before they were
            picked from the vine!</item>
        <item>Hurricanes can push more than 6m of water ashore.</item>
        <item>In Antarctica, snow can fall so hard you can’t see your hand in front of your face.</item>
        <item>A whiteout or heavy snowfall that makes it difficult to see, can make you feel sick.</item>
        <item>Wildfires sometimes create tornadoes made of fire called fire whirls.</item>
        <item>In 1972, a blizzard dumped 8m of snowfall on Iran, burying 200 villages.</item>
        <item> In 525 BC a sandstorm buried hundreds of soldiers in an Egyptian desert.</item>
        <item>In 1684, it was so cold that the River Thames froze solid for two months.</item>
        <item>The naming of hurricanes and tropical storms officially began in 1953. The first name
            was \"Alice\"</item>
        <item>Average global temperature is up 0.94°C since 1880.</item>
        <item>A molecule of water will stay in the Earth’s atmosphere for an average duration
            of 10-12 days.</item>
        <item>In 1899, it was so cold that the Mississippi river froze over its entire length.</item>
        <item>The air located around a lightning bolt is heated to around 30,000°C. This is 5 times
            hotter than the surface of the sun.</item>
        <item>Snowflakes can take up to 1 hour to reach the ground.</item>
        <item>Earth is closest to the Sun in winter</item>
        <item>In 1988, two snowflakes collected from a Wisconsin storm were confirmed to be twins
            at an atmospheric research center in Colorado.</item>
    </string-array>
</resources>