<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/hello_my_name_is"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </TextView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:weightSum="3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >
        <TextView
            android:id="@+id/loc"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/localization"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp">
        </TextView>
        <Button

            android:id="@+id/button_register"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeStepGranularity="1sp"
            />
        <Button

            android:id="@+id/button_delete"
            android:text="@string/unregister"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeStepGranularity="1sp"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <TextView
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/topic"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <EditText
            android:id="@+id/enter_topic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:hint="@string/topic_hint"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            android:textAllCaps="false"
            android:inputType="text"
            android:imeOptions="actionDone"
            >
        </EditText>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:weightSum="3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >
        <TextView
            android:id="@+id/loc2"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/localization"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="15sp">
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>
        <Button

            android:id="@+id/button_unsub"
            android:text="@string/unsub"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeStepGranularity="1sp"
            android:textAllCaps="false"
            />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/for_later_use"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        >

    </RelativeLayout>
</GridLayout>