<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_margin="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/response_main"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </TextView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <TextView
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/response_default"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/relative_layout_rounded_corners"
        >

        <EditText
            android:id="@+id/enter_response"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:hint="@string/response_hint"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:imeOptions="actionDone"
            android:scrollHorizontally="false"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            >
        </EditText>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/for_later_use"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        >

    </RelativeLayout>
</GridLayout>